--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,16 @@
     "description": "A PHP based toolkit",
     "type": "library",
     "require": {
-        "php": ">=5.6.0"
+        "php": ">=5.6.0",
+        "ext-json": "*",
+        "ext-simplexml": "*",
+        "ext-libxml": "*"
     },
     "require-dev": {
-        "php": ">=5.6.0"
+        "php": ">=5.6.0",
+        "ext-json": "*",
+        "ext-simplexml": "*",
+        "ext-libxml": "*"
     },
     "license": "MIT",
     "authors": [
