--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,15 @@
         "php": ">=5.6.0",
         "ext-json": "*",
         "ext-simplexml": "*",
-        "ext-libxml": "*"
+        "ext-libxml": "*",
+        "ext-openssl" : "*"
     },
     "require-dev": {
         "php": ">=5.6.0",
         "ext-json": "*",
         "ext-simplexml": "*",
-        "ext-libxml": "*"
+        "ext-libxml": "*",
+        "ext-openssl" : "*"
     },
     "license": "MIT",
     "authors": [
